[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Enemies/misterion/necromancer_6.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/misterion/necromancer_5.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/misterion/necromancer_3.png" type="Texture" id=3]
[ext_resource path="res://Scenes/enemies/mister.gd" type="Script" id=4]
[ext_resource path="res://Assets/Enemies/misterion/necromancer_4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/misterion/necromancer_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/misterion/necromancer_2.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 3.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 2.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.5, 2.875 )

[node name="mister" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 69
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 5 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 13 )

[node name="TopChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0.5, -8 )
shape = SubResource( 3 )

[node name="SideChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 0.5, -2 )
shape = SubResource( 4 )

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
